[gd_scene load_steps=28 format=3 uid="uid://dovpo3i0usorp"]

[ext_resource type="Script" path="res://src/main/scene/ui/CardsScreen/cards_screen.gd" id="1_3b5is"]
[ext_resource type="Texture2D" uid="uid://cusnn4gvd5ev5" path="res://assets/MyUi/GUI-Sheet.png" id="2_opnr2"]
[ext_resource type="PackedScene" uid="uid://cbixqn7ep27cy" path="res://src/main/scene/ui/Common/InventoryArea/inventory_area.tscn" id="3_w7rfe"]
[ext_resource type="PackedScene" uid="uid://cvtbl63wv4gtb" path="res://src/main/scene/ui/Common/EquipmentArea/equipment_area.tscn" id="4_a2eyk"]
[ext_resource type="PackedScene" uid="uid://cyi7sbayx2h38" path="res://src/main/scene/ui/Common/ShopArea/shop_area.tscn" id="5_bsdcy"]
[ext_resource type="Texture2D" uid="uid://dkq6o1ej6qxsa" path="res://assets/MyIcon/WeaponCard/WeaponCard-Sheet.png" id="6_ud1k7"]
[ext_resource type="Theme" uid="uid://dlcyl15yhjf8a" path="res://src/main/etc/theme/my_theme.tres" id="7_mck0y"]
[ext_resource type="PackedScene" uid="uid://ycvhu1aoyup2" path="res://src/main/scene/ui/Common/MyButton/my_button.tscn" id="8_krcmo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igeek"]
bg_color = Color(0, 0, 0, 0.501961)

[sub_resource type="AtlasTexture" id="AtlasTexture_ep46w"]
atlas = ExtResource("2_opnr2")
region = Rect2(192, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayv8s"]
atlas = ExtResource("2_opnr2")
region = Rect2(208, 240, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mdob"]
atlas = ExtResource("2_opnr2")
region = Rect2(283, 140, 41, 60)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_g3yp4"]
texture = SubResource("AtlasTexture_6mdob")
texture_margin_left = 8.0
texture_margin_top = 8.0
texture_margin_right = 18.0
texture_margin_bottom = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_3o6jj"]
atlas = ExtResource("6_ud1k7")
region = Rect2(16, 144, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_lm45x"]
atlas = ExtResource("6_ud1k7")
region = Rect2(32, 144, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpdur"]
atlas = ExtResource("6_ud1k7")
region = Rect2(48, 144, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxf6a"]
atlas = ExtResource("6_ud1k7")
region = Rect2(64, 144, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_blih0"]
atlas = ExtResource("6_ud1k7")
region = Rect2(80, 144, 6, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_civcj"]
atlas = ExtResource("2_opnr2")
region = Rect2(208, 112, 48, 17)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iraja"]
texture = SubResource("AtlasTexture_civcj")
texture_margin_left = 4.0
texture_margin_top = 4.0
texture_margin_right = 4.0
texture_margin_bottom = 4.0

[sub_resource type="AtlasTexture" id="AtlasTexture_1ko37"]
atlas = ExtResource("2_opnr2")
region = Rect2(209, 209, 46, 15)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2t0tl"]
texture = SubResource("AtlasTexture_1ko37")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 3.0
texture_margin_bottom = 3.0

[sub_resource type="AtlasTexture" id="AtlasTexture_osnom"]
atlas = ExtResource("2_opnr2")
region = Rect2(225, 241, 14, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpjfb"]
atlas = ExtResource("2_opnr2")
region = Rect2(241, 241, 14, 14)

[sub_resource type="Animation" id="Animation_p2d6r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGroundPanel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_d823h"]
resource_name = "show_screen"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("BackGroundPanel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o8psm"]
_data = {
"RESET": SubResource("Animation_p2d6r"),
"show_screen": SubResource("Animation_d823h")
}

[node name="CardsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3b5is")

[node name="BackGroundPanel" type="Panel" parent="."]
z_index = -5
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_igeek")

[node name="CardSpawnMarker2D" type="Marker2D" parent="."]
position = Vector2(258, -98)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopArea" parent="VBoxContainer" instance=ExtResource("5_bsdcy")]
custom_minimum_size = Vector2(270, 56)
layout_mode = 2

[node name="RefreshButton" type="TextureButton" parent="VBoxContainer/ShopArea"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = -32.0
offset_right = 42.0
grow_horizontal = 0
grow_vertical = 0
texture_normal = SubResource("AtlasTexture_ep46w")
texture_pressed = SubResource("AtlasTexture_ayv8s")
stretch_mode = 5

[node name="EquipmentPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 64)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_g3yp4")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/EquipmentPanel"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="EquipmentArea" parent="VBoxContainer/EquipmentPanel/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2

[node name="EquipmentArea2" parent="VBoxContainer/EquipmentPanel/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 1

[node name="EquipmentArea3" parent="VBoxContainer/EquipmentPanel/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 2

[node name="EquipmentArea4" parent="VBoxContainer/EquipmentPanel/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 3

[node name="EquipmentArea5" parent="VBoxContainer/EquipmentPanel/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 4

[node name="EquipmentPanel2" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(280, 64)
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = SubResource("StyleBoxTexture_g3yp4")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/EquipmentPanel2"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 0

[node name="EquipmentArea" parent="VBoxContainer/EquipmentPanel2/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 5

[node name="EquipmentArea2" parent="VBoxContainer/EquipmentPanel2/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 6

[node name="EquipmentArea3" parent="VBoxContainer/EquipmentPanel2/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 7

[node name="EquipmentArea4" parent="VBoxContainer/EquipmentPanel2/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 8

[node name="EquipmentArea5" parent="VBoxContainer/EquipmentPanel2/HBoxContainer" instance=ExtResource("4_a2eyk")]
layout_mode = 2
index = 9

[node name="StarProbs" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(250, 20)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
theme = ExtResource("7_mck0y")
theme_override_constants/separation = 7

[node name="Star1" type="TextureRect" parent="VBoxContainer/StarProbs"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = SubResource("AtlasTexture_3o6jj")
stretch_mode = 5

[node name="Prob1" type="Label" parent="VBoxContainer/StarProbs"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0.0"
vertical_alignment = 1

[node name="Star2" type="TextureRect" parent="VBoxContainer/StarProbs"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = SubResource("AtlasTexture_lm45x")
stretch_mode = 5

[node name="Prob2" type="Label" parent="VBoxContainer/StarProbs"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0.0"
vertical_alignment = 1

[node name="Star3" type="TextureRect" parent="VBoxContainer/StarProbs"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = SubResource("AtlasTexture_lpdur")
stretch_mode = 5

[node name="Prob3" type="Label" parent="VBoxContainer/StarProbs"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0.0"
vertical_alignment = 1

[node name="Star4" type="TextureRect" parent="VBoxContainer/StarProbs"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = SubResource("AtlasTexture_dxf6a")
stretch_mode = 5

[node name="Prob4" type="Label" parent="VBoxContainer/StarProbs"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0.0"
vertical_alignment = 1

[node name="Star5" type="TextureRect" parent="VBoxContainer/StarProbs"]
custom_minimum_size = Vector2(16, 16)
layout_mode = 2
texture = SubResource("AtlasTexture_blih0")
stretch_mode = 5

[node name="Prob5" type="Label" parent="VBoxContainer/StarProbs"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "0.0"
vertical_alignment = 1

[node name="InventoryPanel" type="PanelContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(510, 64)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_iraja")

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/InventoryPanel"]
layout_mode = 2

[node name="InventoryArea" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2

[node name="InventoryArea2" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 1

[node name="InventoryArea3" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 2

[node name="InventoryArea4" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 3

[node name="InventoryArea5" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 4

[node name="InventoryArea6" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 5

[node name="InventoryArea7" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 6

[node name="InventoryArea8" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 7

[node name="InventoryArea9" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 8

[node name="InventoryArea10" parent="VBoxContainer/InventoryPanel/HBoxContainer" instance=ExtResource("3_w7rfe")]
layout_mode = 2
index = 9

[node name="PlayerLevel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = 7.0
offset_top = 144.0
offset_right = 55.0
offset_bottom = 192.0
theme_override_styles/panel = SubResource("StyleBoxTexture_2t0tl")

[node name="LevelLabel" type="Label" parent="PlayerLevel"]
layout_mode = 2
theme = ExtResource("7_mck0y")
theme_override_font_sizes/font_size = 32
text = "123"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpdateLevelButton" type="TextureButton" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 0
offset_left = 61.0
offset_top = 154.0
offset_right = 93.0
offset_bottom = 186.0
texture_normal = SubResource("AtlasTexture_osnom")
texture_pressed = SubResource("AtlasTexture_jpjfb")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_o8psm")
}

[node name="EndButton" parent="." instance=ExtResource("8_krcmo")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -72.0
offset_right = 0.0
offset_bottom = 32.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 16
text = "下一关"

[connection signal="pressed" from="UpdateLevelButton" to="." method="_on_update_level_button_pressed"]
[connection signal="pressed" from="EndButton" to="." method="_on_end_button_pressed"]
